# first-setup

./: .gitignore  README.md  VERSION  __first_setup_cleanup  __first_setup_reset_session  first-setup.txt  first_setup_post  first_setup_post_boot  meson.build  recipe.example.json  recipe.json  test.py  tests.json
.github/workflows/: build.yml  release.yml
data/: firstsetup-session.desktop  firstsetup.desktop  firstsetup.session  firstsetup.session.conf  io.github.vanilla-os.FirstSetup.appdata.xml.in  io.github.vanilla-os.FirstSetup.desktop.in  io.github.vanilla-os.FirstSetup.gschema.xml  io.github.vanilla-os.SugarCubes.appdata.xml.in  io.github.vanilla-os.SugarCubes.desktop.in  io.github.vanilla-os.SugarCubes.gschema.xml  meson.build  org.vanillaos.FirstSetup.NewUser.desktop  org.vanillaos.FirstSetup.appdata.xml.in  org.vanillaos.FirstSetup.desktop.in  org.vanillaos.FirstSetup.gschema.xml  org.vanillaos.FirstSetup.policy  org.vanillaos.FirstSetup.rules  pm.mirko.UbuntuSmoother.appdata.xml.in  pm.mirko.UbuntuSmoother.desktop.in  pm.mirko.UbuntuSmoother.gschema.xml  remove-first-setup-user  remove-first-setup-user.service
data/icons/: meson.build
debian/: changelog  control  copyright  debhelper-build-stamp  vanilla-first-setup.install
debian/ubuntu-smoother/DEBIAN/: control  md5sums
debian/ubuntu-smoother/usr/share/appdata/: pm.mirko.UbuntuSmoother.appdata.xml
debian/ubuntu-smoother/usr/share/applications/: pm.mirko.UbuntuSmoother.desktop
debian/ubuntu-smoother/usr/share/doc/ubuntu-smoother/: copyright
debian/ubuntu-smoother/usr/share/glib-2.0/schemas/: pm.mirko.UbuntuSmoother.gschema.xml
debian/ubuntu-smoother/usr/share/pm.mirko.UbuntuSmoother/: ubuntu-smoother.gresource
debian/ubuntu-smoother/usr/share/pm.mirko.UbuntuSmoother/ubuntu_smoother/: main.py  window.py
debian/ubuntu-smoother/usr/share/pm.mirko.UbuntuSmoother/ubuntu_smoother/models/: config.py
debian/ubuntu-smoother/usr/share/pm.mirko.UbuntuSmoother/ubuntu_smoother/utils/: checks.py  configurator.py  run_async.py  snap.py
po/: LINGUAS  POTFILES  af.po  am.po  an.po  ar.po  ar_MA.po  arn.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fa_AF.po  (+104 more)
sugar_cubes/: main.py  meson.build  sugar-cubes-processor.in  ubuntu-smoother.gresource.xml  window.py
sugar_cubes/gtk/: window.ui
sugar_cubes/utils/: configurator.py  flatpak.py  meson.build  processor.py  run_async.py
ubuntu_smoother/: main.py  meson.build  ubuntu-smoother-processor.in  ubuntu-smoother.gresource.xml  ubuntu-smoother.in  window.py
ubuntu_smoother/gtk/: window.ui
ubuntu_smoother/models/: config.py  meson.build  preset.py
ubuntu_smoother/utils/: apt.py  checks.py  configurator.py  flatpak.py  meson.build  processor.py  run_async.py  snap.py
vanilla_first_setup/: application.py  apps.json  dialog.py  main.py  meson.build  style.css  vanilla-first-setup-prepare-files.in  vanilla-first-setup-processor.in  vanilla-first-setup.gresource.xml  vanilla-first-setup.in  window.py
vanilla_first_setup/core/: applications.py  backend.py  keyboard.py  keymaps.py  languages.py  meson.build  timezones.py
vanilla_first_setup/defaults/: applications.py  conn_check.py  hostname.py  keyboard.py  language.py  meson.build  network.py  theme.py  timezone.py  user.py  welcome.py
vanilla_first_setup/dialogs/: meson.build  prop_drivers.py  subsystem.py
vanilla_first_setup/gtk/: applications-dialog.ui  applications-install-dialog.ui  applications-uninstall-dialog.ui  conn-check.ui  default-conn-check.blp  default-conn-check.ui  default-hostname.blp  default-hostname.ui  default-network.ui  default-theme.blp  default-theme.ui  default-timezone.ui  default-user.blp  default-user.ui  default-welcome.blp  default-welcome.ui  dialog-prop-nvidia.ui  dialog-subsystem.ui  dialog.ui  done.blp  done.ui  hostname.ui  keyboard.ui  language.ui  layout-applications-update.ui  layout-applications.blp  layout-applications.ui  layout-preferences.blp  layout-preferences.ui  layout-yes-no.ui  location.ui  logout.ui  post-script.blp  post-script.ui  progress.blp  progress.ui  theme.ui  timezone.ui  tour.blp  tour.ui  (+11 more)
vanilla_first_setup/layouts/: applications.py  meson.build  preferences.py  yes_no.py
vanilla_first_setup/models/: config.py  meson.build  preset.py
vanilla_first_setup/scripts/: disable-lockscreen  flatpak  flatpak-install  flatpak-uninstall  hostname  keyboard  live-keyboard  locale  logout  meson.build  open-accessibility-settings  open-network-settings  remove-autostart-file  remove-first-setup-user  setup-flatpak-remote  setup-system  theme  timezone  user
vanilla_first_setup/utils/: apt.py  builder.py  checks.py  configurator.py  flatpak.py  meson.build  network.py  parser.py  processor.py  recipe.py  run_async.py  snap.py  tests.py  welcome_langs.py
vanilla_first_setup/views/: applications.py  applications_update.py  conn_check.py  done.py  hostname.py  keyboard.py  language.py  locations.py  logout.py  meson.build  post_script.py  progress.py  theme.py  timezone.py  tour.py  user.py  welcome.py  welcome_update.py  welcome_user.py
