icons_dir = join_paths(get_option('datadir'), 'icons')

scalable_dir = join_paths('hicolor', 'scalable', 'apps')
symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')


install_data(
  join_paths(scalable_dir, 'org.vanillaos.FirstSetup.svg'),
  install_dir: join_paths(icons_dir, scalable_dir)
)

install_data(
  join_paths(scalable_dir, 'org.vanillaos.FirstSetup-flower.svg'),
  install_dir: join_paths(icons_dir, scalable_dir)
)

install_data(
  join_paths(symbolic_dir, 'org.vanillaos.FirstSetup-symbolic.svg'),
  install_dir: join_paths(icons_dir, symbolic_dir)
)
